# my_env

./: .gitignore  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
openenv_support_ticket_triage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: Dockerfile  app.py  my_env_environment.py  requirements.txt
